--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
               <h3 class="panel-title"><strong>Current Train Schedule</strong></h3>
             </div>
             <div class="panel-body">
-              <table class="table table-hover" id='employee-table'>
+              <table class="table table-hover" id='train-table'>
                 <thead>
                   <tr>
                     <th>Train Name</th>
                     <th>Destination</th>
-                    <th>Start Date</th>
                     <th>Frequency (min)</th>
-                    <th>Monthly Rate ($)</th>
-                    <th>Total Billed ($)</th>
-                  </tr>
+                    <th>Next Arrival</th>
+                    <th>Minutes Away</th>
+<!--                     <th>Total Billed ($)</th>
+ -->                  </tr>
                 </thead>
                 <tbody>
                 </tbody>
@@ -56,19 +56,19 @@
               <form>
                 <div class="form-group">
                   <label for="train-name-input">Train Name</label>
-                  <input class="form-control" id="train-name-input" type="text">
+                  <input class="form-control" id="train-name-input" type="text" placeholder="placeTrain" pattern="[A-Za-z]{3}"
                 </div>
                 <div class="form-group">
-                  <label for="role-input">Role</label>
-                  <input class="form-control" id="role-input" type="text">
+                  <label for="destination-input">Destination</label>
+                  <input class="form-control" id="destination-input" type="text" pattern="[A-Za-z]{3}">
                 </div>
                 <div class="form-group">
-                  <label for="start-input">Start Date (DD/MM/YY - ex: 01/01/89)</label>
-                  <input class="form-control" id="start-input" type="text">
+                  <label for="start-input">Start Train (HH:mm - military time)</label>
+                  <input class="form-control" id="start-input" type="text" pattern="[A-Za-z]{3}">
                 </div>
                 <div class="form-group">
-                  <label for="rate-input">Monthly Rate</label>
-                  <input class="form-control" id="rate-input" type="text">
+                  <label for="rate-input">Frequency (min)</label>
+                  <input class="form-control" id="rate-input" type="text" pattern="[A-Za-z]{3}">
                 </div>
                 <button class="btn btn-primary" id="add-train-btn" type="submit">Submit</button>
               </form>
@@ -77,7 +77,7 @@
         </div>
       </div>
     </div>
-    <!-- JavaScript -->
-    <script src="style.js"></script>
+    <!-- JavaScript --> 
+    <script src="assets/javascript/script.js"></script>
   </body>
 </html>
